--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     const CONFIG = {
       SHEET_JSON_URL: "https://script.google.com/.../exec", // PLACEHOLDER (Apps Script Web App - Opción B)
       // CSV publicado que compartiste (hoja "Sheet2" según indicaste):
-      SHEET_CSV_URL: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTZ-GFIahnmzB09C1GWCvAs1PaNXmpN2_Ed5taWtseTRlqx0P8-ZKJ28TOsvziFOw/pub?output=csv",
+      SHEET_CSV_URL: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTZ-GFIahnmzB09C1GWCvAs1PaNXmpN2_Ed5taWtseTRlqx0P8-ZKJ28TOsvziFOw/pub?gid=128232950&single=true&output=csv",
       TEMPORADA_CLASES: { inicio: "2025-02-15", fin: "2025-03-31" },
       CACHE_TTL_MS: 1000 * 60 * 60 * 6, // 6 horas
     };
